# simple_cpp_template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  app.cpp
include/primelib/: prime_app.hpp
src/: CMakeLists.txt  prime_app.cpp  project_lib.cpp  project_lib.h
tests/: CMakeLists.txt  prime_test.cpp  tests.cpp
